bindings/bindings.rs

extern "C" {
    pub fn basisu_get_image_info(
        transcoder: *const basisu_transcoder,
        data: *const ::std::os::raw::c_void,
        data_len: u32,
        info: *mut basisu_image_info,
        image_index: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn basisu_get_image_level_info(
        transcoder: *const basisu_transcoder,
        data: *const ::std::os::raw::c_void,
        data_len: u32,
        info: *mut basisu_image_level_info,
        image_index: u32,
        level_index: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn basisu_get_file_info(
        transcoder: *const basisu_transcoder,
        data: *const ::std::os::raw::c_void,
        data_len: u32,
        file_info: *mut basisu_file_info,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn basisu_start_transcoding(
        transcoder: *mut basisu_transcoder,
        data: *const ::std::os::raw::c_void,
        data_len: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn basisu_stop_transcoding(transcoder: *mut basisu_transcoder) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn basisu_transcode_image_level(
        transcoder: *mut basisu_transcoder,
        data: *const ::std::os::raw::c_void,
        data_len: u32,
        image_index: u32,
        level_index: u32,
        output_blocks: *mut ::std::os::raw::c_void,
        output_blocks_buf_size_in_blocks_or_pixels: u32,
        format: basisu_transcoder_format,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn basisu_transcoder_free(transcoder: *mut basisu_transcoder);
}
